refactor state machine, add LocalStateList, move to OptionMenu